--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,42 +6,47 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>615</width>
-    <height>440</height>
+    <width>685</width>
+    <height>582</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(186, 189, 182);</string>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QTableWidget" name="map">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>401</width>
-      <height>371</height>
+      <x>8</x>
+      <y>8</y>
+      <width>581</width>
+      <height>491</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QPushButton" name="predictButt">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>10</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(238, 238, 236);</string>
     </property>
-    <property name="text">
-     <string>predict</string>
-    </property>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>10</number>
+    </attribute>
+    <attribute name="horizontalHeaderMinimumSectionSize">
+     <number>10</number>
+    </attribute>
+    <attribute name="verticalHeaderDefaultSectionSize">
+     <number>10</number>
+    </attribute>
+    <attribute name="verticalHeaderMinimumSectionSize">
+     <number>10</number>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="clearButt">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>40</y>
+      <x>600</x>
+      <y>10</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -50,17 +55,25 @@
      <string>clear</string>
     </property>
    </widget>
-   <widget class="QLabel" name="output_label">
+   <widget class="QLabel" name="prediction">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>80</y>
-      <width>181</width>
-      <height>251</height>
+      <x>600</x>
+      <y>40</y>
+      <width>71</width>
+      <height>91</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);
+font: 75 64pt &quot;Courier 10 Pitch&quot;;</string>
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
@@ -69,18 +82,10 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>615</width>
-     <height>21</height>
+     <width>685</width>
+     <height>20</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
